--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,6 @@
 PORT=3002
-DEV_DATABASE_HOST="127.0.0.1"
-DEV_DATABASE_USERNAME="postgres"
-DEV_DATABASE_PASSWORD="postgres"
+DB_HOST="localhost"
+DB_PORT="5432"
+DB_NAME="elif_delivery"
+DB_PASSWORD="postgres"
+USERNAME='postgres'
