--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,8 @@
 PORT=3002
-DB_HOST="localhost"
-DB_PORT="5432"
-DB_NAME="elif_delivery"
-DB_PASSWORD="postgres"
+DB_HOST="containers-us-west-177.railway.app"
+DB_PORT="6786"
+DB_NAME="railway"
+DB_PASSWORD="uAh7SLiMphmASgDiojIk"
 USERNAME='postgres'
+NODE_ENV='production'
+DB_URL='postgresql://postgres:uAh7SLiMphmASgDiojIk@containers-us-west-177.railway.app:6786/railway'
