--- a/server/.env
+++ b/server/.env
@@ -4,5 +4,5 @@ DB_PORT="6786"
 DB_NAME="railway"
 DB_PASSWORD="uAh7SLiMphmASgDiojIk"
 USERNAME='postgres'
-NODE_ENV='production'
+NODE_ENV='development'
 DB_URL='postgresql://postgres:uAh7SLiMphmASgDiojIk@containers-us-west-177.railway.app:6786/railway'
